fhir/6.0.0/profiles.md
# Profiles - eHealth Infrastructure v6.0.0

* [**Table of Contents**](toc.md)
* **Profiles**

## Profiles

*  [ehealth-actionguidance](StructureDefinition-ehealth-actionguidance.md)
*  [ehealth-activitydefinition](StructureDefinition-ehealth-activitydefinition.md)
*  [ehealth-appointment](StructureDefinition-ehealth-appointment.md)
*  [ehealth-auditevent](StructureDefinition-ehealth-auditevent.md)
*  [ehealth-careplan](StructureDefinition-ehealth-careplan.md)
*  [ehealth-careteam](StructureDefinition-ehealth-careteam.md)
*  [ehealth-clinicalimpression](StructureDefinition-ehealth-clinicalimpression.md)
*  [ehealth-communication-request](StructureDefinition-ehealth-communication-request.md)
*  [ehealth-communication](StructureDefinition-ehealth-communication.md)
*  [ehealth-composition](StructureDefinition-ehealth-composition.md)
*  [ehealth-condition](StructureDefinition-ehealth-condition.md)
*  [ehealth-consent](StructureDefinition-ehealth-consent.md)
*  [ehealth-definedquestion](StructureDefinition-ehealth-definedquestion.md)
*  [ehealth-device](StructureDefinition-ehealth-device.md)
*  [ehealth-devicemetric](StructureDefinition-ehealth-devicemetric.md)
*  [ehealth-deviceusestatement](StructureDefinition-ehealth-deviceusestatement.md)
*  [ehealth-documentreference](StructureDefinition-ehealth-documentreference.md)
*  [ehealth-episodeofcare](StructureDefinition-ehealth-episodeofcare.md)
*  [ehealth-goal](StructureDefinition-ehealth-goal.md)
*  [ehealth-group-appointment](StructureDefinition-ehealth-group-appointment.md)
*  [ehealth-group-videoappointment](StructureDefinition-ehealth-group-videoappointment.md)
*  [ehealth-guidanceresponse](StructureDefinition-ehealth-guidanceresponse.md)
*  [ehealth-library](StructureDefinition-ehealth-library.md)
*  [ehealth-material-communication](StructureDefinition-ehealth-material-communication.md)
*  [ehealth-media](StructureDefinition-ehealth-media.md)
*  [ehealth-message](StructureDefinition-ehealth-message.md)
*  [ehealth-observation-wound-dimensions](StructureDefinition-ehealth-observation-wound-dimensions.md)
*  [ehealth-observation](StructureDefinition-ehealth-observation.md)
*  [ehealth-organization](StructureDefinition-ehealth-organization.md)
*  [ehealth-patient](StructureDefinition-ehealth-patient.md)
*  [ehealth-plandefinition](StructureDefinition-ehealth-plandefinition.md)
*  [ehealth-practitioner](StructureDefinition-ehealth-practitioner.md)
*  [ehealth-practitionerrole](StructureDefinition-ehealth-practitionerrole.md)
*  [ehealth-provenance](StructureDefinition-ehealth-provenance.md)
*  [ehealth-questionnaire-advanced](StructureDefinition-ehealth-questionnaire-advanced.md)
*  [ehealth-questionnaire](StructureDefinition-ehealth-questionnaire.md)
*  [ehealth-questionnaireresponse](StructureDefinition-ehealth-questionnaireresponse.md)
*  [ehealth-relatedperson](StructureDefinition-ehealth-relatedperson.md)
*  [ehealth-servicerequest](StructureDefinition-ehealth-servicerequest.md)
*  [ehealth-skrs-patient](StructureDefinition-ehealth-skrs-patient.md)
*  [ehealth-task](StructureDefinition-ehealth-task.md)
*  [ehealth-transformation-documentreference](StructureDefinition-ehealth-transformation-documentreference.md)
*  [ehealth-videoappointment](StructureDefinition-ehealth-videoappointment.md)
*  [ehealth-view](StructureDefinition-ehealth-view.md)

### Extensions

The following [Extensions](http://hl7.org/fhir/R4/extensibility.html) have been defined as part of this implementation Guide. A [registry of standard extensions](http://hl7.org/fhir/R4/extensibility-registry.html) can be found in the FHIR specification and additional extensions may be registered on the HL7 FHIR registry at [http://hl7.org/fhir/registry](http://hl7.org/fhir/registry).

* [Action Trigger](StructureDefinition-ehealth-actionTrigger.md)

* [Ehealth action guidance for](StructureDefinition-ehealth-actionguidance-for.md)

* [Ehealth action guidance type](StructureDefinition-ehealth-actionguidance-type.md)

* [Administrative status](StructureDefinition-ehealth-administrative-status.md)

* [Answer condition](StructureDefinition-ehealth-answer-Condition.md)

* [Artifact Date](StructureDefinition-ehealth-artifact-date.md)

* [Assigning careteam](StructureDefinition-ehealth-assigning-careteam.md)

* [Base environment](StructureDefinition-ehealth-base-environment.md)

* [Base](StructureDefinition-ehealth-base.md)

* [Title](StructureDefinition-ehealth-basic-title.md)

* [Careplan status history](StructureDefinition-ehealth-careplan-statusHistory.md)

* [Careplan status schedule](StructureDefinition-ehealth-careplan-statusschedule.md)

* [assessor-Organization](StructureDefinition-ehealth-clinicalimpression-assessor-organization.md)

* [assessor-other](StructureDefinition-ehealth-clinicalimpression-assessor-other.md)

* [Careplan](StructureDefinition-ehealth-clinicalimpression-careplan.md)

* [Decision](StructureDefinition-ehealth-clinicalimpression-decision.md)

* [Decision context](StructureDefinition-ehealth-clinicalimpression-decisionContext.md)

* [Media investigation item](StructureDefinition-ehealth-clinicalimpression-mediaInvestigationItem.md)

* [View investigation item](StructureDefinition-ehealth-clinicalimpression-viewInvestigationItem.md)

* [Recipient careteam](StructureDefinition-ehealth-communication-recipientCareTeam.md)

* [Sender careteam](StructureDefinition-ehealth-communication-senderCareTeam.md)

* [Author organization](StructureDefinition-ehealth-composition-authorOrganization.md)

* [Content](StructureDefinition-ehealth-content.md)

* [Creator](StructureDefinition-ehealth-creator.md)

* [Description](StructureDefinition-ehealth-description.md)

* [Privately owned](StructureDefinition-ehealth-device-privatelyOwned.md)

* [Suppliers](StructureDefinition-ehealth-device-suppliers.md)

* [Calibration expires](StructureDefinition-ehealth-devicemetric-calibrationExpires.md)

* [Properties](StructureDefinition-ehealth-devicemetric-properties.md)

* [Qualities](StructureDefinition-ehealth-devicemetric-qualities.md)

* [Quality history](StructureDefinition-ehealth-devicemetric-qualityHistory.md)

* [Template qualities](StructureDefinition-ehealth-devicemetric-templateQualities.md)

* [Context](StructureDefinition-ehealth-deviceusestatement-context.md)

* [State of the document sharing](StructureDefinition-ehealth-document-sharing-state.md)

* [effectivePeriod](StructureDefinition-ehealth-effectivePeriod.md)

* [Employee title](StructureDefinition-ehealth-employee-title.md)

* [Condition Id](StructureDefinition-ehealth-enableBehavior-conditionId.md)

* [End meeting on end time](StructureDefinition-ehealth-end-meeting-on-end-time.md)

* [Caremanager organization](StructureDefinition-ehealth-episodeofcare-caremanagerOrganization.md)

* [Status schedule](StructureDefinition-ehealth-episodeofcare-statusschedule.md)

* [Careteam](StructureDefinition-ehealth-ext-careteam.md)

* [ExternalIdentifier](StructureDefinition-ehealth-external-identifier.md)

* [General health condition](StructureDefinition-ehealth-general-health-condition.md)

* [Group id](StructureDefinition-ehealth-group-id.md)

* [Guest PIN code](StructureDefinition-ehealth-guest-pin-code.md)

* [EpisodeOfCare](StructureDefinition-ehealth-guidanceresponse-episodeOfCare.md)

* [Guest PIN code](StructureDefinition-ehealth-host-pin-code.md)

* [includeAsExtra](StructureDefinition-ehealth-include-as-extra.md)

* [Intended audience](StructureDefinition-ehealth-intendedAudience.md)

* [Intended organization](StructureDefinition-ehealth-intendedOrganization.md)

* [IT competence level](StructureDefinition-ehealth-itcompetencelevel.md)

* [Legal basis](StructureDefinition-ehealth-legalBasis.md)

* [Ehealth Document manually deprecated](StructureDefinition-ehealth-manuallydeprecated-type.md)

* [Max participants](StructureDefinition-ehealth-max-participants.md)

* [Related to](StructureDefinition-ehealth-media-related-to.md)

* [Series ID](StructureDefinition-ehealth-media-series-id.md)

* [Media Thumbnail representation](StructureDefinition-ehealth-media-thumbnail.md)

* [Usage mode](StructureDefinition-ehealth-media-usage-mode.md)

* [Meeting URL](StructureDefinition-ehealth-meeting-url.md)

* [Modified role](StructureDefinition-ehealth-modifier-role.md)

* [Name and address protection](StructureDefinition-ehealth-nameandaddressprotection.md)

* [Observation method](StructureDefinition-ehealth-observation-method.md)

* [On behalf of](StructureDefinition-ehealth-on-behalf-of.md)

* [CVR Number](StructureDefinition-ehealth-organization-cvrNumber.md)

* [Municipality Code](StructureDefinition-ehealth-organization-municipalityCode.md)

* [Provider identifier](StructureDefinition-ehealth-organization-providerIdentifier.md)

* [Region code](StructureDefinition-ehealth-organization-regionCode.md)

* [Related to](StructureDefinition-ehealth-organization-relatedTo.md)

* [Organization Source](StructureDefinition-ehealth-organization-source.md)

* [Organization specialty](StructureDefinition-ehealth-organization-specialty.md)

* [Organization Synchronization status](StructureDefinition-ehealth-organization-synchronizationStatus.md)

* [Telecom Custodian](StructureDefinition-ehealth-organization-telecomCustodian.md)

* [Telecom System](StructureDefinition-ehealth-organization-telecomSystem.md)

* [Telecom Value](StructureDefinition-ehealth-organization-telecomValue.md)

* [Overview usage mode](StructureDefinition-ehealth-overviewUsageMode.md)

* [Participant](StructureDefinition-ehealth-participant.md)

* [Patient contact note](StructureDefinition-ehealth-patient-contactnote.md)

* [Performer](StructureDefinition-ehealth-performer.md)

* [Performing organization](StructureDefinition-ehealth-performing-organization.md)

* [Period](StructureDefinition-ehealth-period.md)

* [Predecessor](StructureDefinition-ehealth-predecessor.md)

* [Priority](StructureDefinition-ehealth-priority.md)

* [Date/time of re-used entity](StructureDefinition-ehealth-provenance-dateTimeOfReusedEntity.md)

* [Purpose](StructureDefinition-ehealth-purpose.md)

* [Quality](StructureDefinition-ehealth-quality.md)

* [Answer significance](StructureDefinition-ehealth-questionnaire-answerSignificance.md)

* [Feedback](StructureDefinition-ehealth-questionnaire-feedback.md)

* [Help text](StructureDefinition-ehealth-questionnaire-helpText.md)

* [Questionnaire image](StructureDefinition-ehealth-questionnaire-image.md)

* [Questionnaire intended organization](StructureDefinition-ehealth-questionnaire-intendedOrganization.md)

* [Copyright item indicator](StructureDefinition-ehealth-questionnaire-item-is-copyright.md)

* [Questionnaire recommendation](StructureDefinition-ehealth-questionnaire-recommendation.md)

* [Short text](StructureDefinition-ehealth-questionnaire-shortText.md)

* [Slider Step-value Decimal](StructureDefinition-ehealth-questionnaire-sliderStepValueDecimal.md)

* [Questionnaire type](StructureDefinition-ehealth-questionnaire-type.md)

* [Questionnaire response finding basis](StructureDefinition-ehealth-questionnaireresponse-finding-basis.md)

* [recommendation](StructureDefinition-ehealth-recommendation.md)

* [Reference range](StructureDefinition-ehealth-referenceRange.md)

* [Registration deadline](StructureDefinition-ehealth-registration-deadline.md)

* [Releasable resource](StructureDefinition-ehealth-releasableResource.md)

* [Resolved timing](StructureDefinition-ehealth-resolved-timing.md)

* [Responsible organization](StructureDefinition-ehealth-responsible-organization.md)

* [Responsible](StructureDefinition-ehealth-responsible.md)

* [Restriction category](StructureDefinition-ehealth-restriction-category.md)

* [Reuse criteria](StructureDefinition-ehealth-reuseCriteria.md)

* [Revision](StructureDefinition-ehealth-revision.md)

* [ServiceRequest status history](StructureDefinition-ehealth-servicerequest-statusHistory.md)

* [ServiceRequest status schedule](StructureDefinition-ehealth-servicerequest-statusSchedule.md)

* [Sharing Approval Policy](StructureDefinition-ehealth-sharingApprovalPolicy.md)

* [Sharing policy](StructureDefinition-ehealth-sharingPolicy.md)

* [Status](StructureDefinition-ehealth-status.md)

* [Task category](StructureDefinition-ehealth-task-category.md)

* [EpisodeOfCare](StructureDefinition-ehealth-task-episodeOfCare.md)

* [Task responsible](StructureDefinition-ehealth-task-responsible.md)

* [Team history](StructureDefinition-ehealth-teamHistory.md)

* [Team schedule](StructureDefinition-ehealth-teamschedule.md)

* [Thread id](StructureDefinition-ehealth-thread-id.md)

* [Title](StructureDefinition-ehealth-title.md)

* [triggerEnablementCode](StructureDefinition-ehealth-trigger-enablement-code.md)

* [Trigger Condition](StructureDefinition-ehealth-triggerCondition.md)

* [Usage](StructureDefinition-ehealth-usage.md)

* [useContext](StructureDefinition-ehealth-useContext.md)

* [Version](StructureDefinition-ehealth-version.md)

* [View for](StructureDefinition-ehealth-view-for.md)

* [View type](StructureDefinition-ehealth-view-type.md)

* [VMR URI](StructureDefinition-ehealth-vmr-uri.md)

* [Interpreter required](StructureDefinition-patient-interpreterRequired.md)

### Datatype Profiles

The following profiles for FHIR **datatypes** have been defined for this implementation guide.

### FHIR Resources Used Without Profile

The following foundation and base FHIR resources are used in the eHealth Infrastructure:

* [StructureDefinition](http://hl7.org/fhir/R4/structuredefinition.html)
* [ValueSet](http://hl7.org/fhir/R4/valueset.html)
* [NamingSystem](http://hl7.org/fhir/R4/namingsystem.html)
* [Parameters](http://hl7.org/fhir/R4/parameters.html)
* [Resource](http://hl7.org/fhir/R4/resource.html)
* [Bundle](http://hl7.org/fhir/R4/bundle.html)
* [List](http://hl7.org/fhir/R4/list.html)

These resources are used as defined in FHIR Core as no need for profiling has been identified.

### FHIR Resources Slated for Use or Profiling

The following resources are considered for profiling and/or use in a coming release of the eHealth Infrastructure: **None at this time.**

### References to Unused FHIR Resources

In accordance with the open modeling approach, references to FHIR Core resources have been left as-is in the current profiles/resources even when such resources cannot be created (and therefore not referenced) in the current eHealth Infrastructure. This has been done to lessen the impact of possible future use of those referenced resources, should usage scenarios arise. In cases where this causes unwanted complexity, references to certain resources have been removed. The following is a non-exhaustive list of such unused resources:

* [AllergyIntolerance](http://hl7.org/fhir/R4/allergyintolerance.html)
* [DiagnosticReport](http://hl7.org/fhir/R4/diagnosticreport.html)
* [Encounter](http://hl7.org/fhir/R4/encounter.html)
* [Endpoint](http://hl7.org/fhir/R4/endpoint.html)
* [FamilyMemberHistory](http://hl7.org/fhir/R4/familymemberhistory.html)
* [Goal](http://hl7.org/fhir/R4/goal.html)
* [Group](http://hl7.org/fhir/R4/group.html)
* [HealthcareService](http://hl7.org/fhir/R4/healthcareservice.html)
* [ImagingStudy](http://hl7.org/fhir/R4/imagingstudy.html)
* [Location](http://hl7.org/fhir/R4/location.html)
* [Medication](http://hl7.org/fhir/R4/medication.html)
* [MedicationRequest](http://hl7.org/fhir/R4/medicationrequest.html)
* [Procedure](http://hl7.org/fhir/R4/procedure.html)
* [ReferralRequest](http://hl7.org/fhir/R4/referralrequest.html)
* [RiskAssessment](http://hl7.org/fhir/R4/riskassessment.html)
* [Sequence](http://hl7.org/fhir/R4/sequence.html)
* [Specimen](http://hl7.org/fhir/R4/specimen.html)
* [StructureMap](http://hl7.org/fhir/R4/structuremap.html)
* [Substance](http://hl7.org/fhir/R4/substance.html)

